--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
     },
     "browser_specific_settings": {
         "gecko": {
-            "id": "test@example.com"
+            "id": "ChatGPT@twanottink.nl"
         }
     },
     "browser_action": {
